@@ -551,6 +551,10 @@ verilog/parser_bugs.v:511: VAR  'net' 'A' 'module' 'trireg' '' '' ''
 verilog/parser_bugs.v:512: VAR  'port' 'B' 'module' 'trireg' '' '' ''
 verilog/parser_bugs.v:512: PORT  'B' 'module' 'output' '' '' '0'
 verilog/parser_bugs.v:513: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:515: MODULE  'module' 'msg2540' undef '0'
+verilog/parser_bugs.v:516: VAR  'port' 'foo' 'module' '' 'signed' '' ''
+verilog/parser_bugs.v:516: PORT  'foo' 'module' 'output' 'signed' '' '1'
+verilog/parser_bugs.v:517: ENDMODULE  'endmodule'
 verilog/pinorder.v:001: COMMENT  '// DESCRIPTION: Verilog-Perl: Example Verilog for testing package'
 verilog/pinorder.v:002: COMMENT  '//'
 verilog/pinorder.v:003: COMMENT  '// This file ONLY is placed into the Public Domain, for any use,'
@@ -1092,7 +1096,21 @@ verilog/parser_sv09.v:035: IMPORT  'pkga' '*'
 verilog/parser_sv09.v:036: IMPORT  'pkgb' '*'
 verilog/parser_sv09.v:037: VAR  'port' 'foobar' 'module' '' '' '' ''
 verilog/parser_sv09.v:037: PORT  'foobar' 'module' 'input' '' '' '1'
+verilog/parser_sv09.v:041: COMMENT  '// msg2546'
 verilog/parser_sv09.v:038: ENDMODULE  'endmodule'
+verilog/parser_sv09.v:042: MODULE  'module' 'def_cov_point' undef '0'
+verilog/parser_sv09.v:043: VAR  'var' 'data' 'module' '' 'logic [7:0]' '' ''
+verilog/parser_sv09.v:044: VAR  'var' 'addr' 'module' '' 'logic [7:0]' '' ''
+verilog/parser_sv09.v:045: COVERGROUP  'covergroup' 'c'
+verilog/parser_sv09.v:051: COMMENT  '// Can't handle this due to package parsing yaID__ETC'
+verilog/parser_sv09.v:052: COMMENT  '//covergroup d;'
+verilog/parser_sv09.v:053: COMMENT  '//   d : coverpoint data {'
+verilog/parser_sv09.v:054: COMMENT  '//      bins low[] = {[0:10]};'
+verilog/parser_sv09.v:055: COMMENT  '//      bins med[] = {[11:20]};'
+verilog/parser_sv09.v:056: COMMENT  '//   }'
+verilog/parser_sv09.v:057: COMMENT  '//endgroup'
+verilog/parser_sv09.v:050: ENDGROUP  'endgroup'
+verilog/parser_sv09.v:058: ENDMODULE  'endmodule'
 verilog/parser_sv17.v:001: COMMENT  '// 1800-2017'
 verilog/parser_sv17.v:002: MODULE  'module' 'sv17' undef '0'
 verilog/parser_sv17.v:003: VAR  'var' 'i' 'module' '' 'integer' '' ''
